objects/Spend_Request__c.object
<CustomObject>
    <fields>
        <fullName>Development_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Development Engineer</description>
        <label>Development Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Spend_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pre_Contract_Spend_Type__c</fullName>
        <description>Pre Contract Spend Type field label is changed to Development stage as per Matt White . As per Matt white&apos;s request on 2/26/2015 Development Stage is changed to Request Type.</description>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>Development Spend</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Amount_External_Services__c</fullName>
        <description>Request Amount - External Services</description>
        <label>Request Amount - External Services</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Request_Amount_Materials__c</fullName>
        <description>Request Amount - Materials</description>
        <label>Request Amount - Materials</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Site_Name__c</fullName>
        <description>Linked from Site</description>
        <label>Site Name</label>
        <referenceTo>Site_Information_Form__c</referenceTo>
        <relationshipLabel>Development Spend Request</relationshipLabel>
        <relationshipName>Spend_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <description>Site (SIF# from associate site record)</description>
        <formula>Site_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spend_Request_Notes__c</fullName>
        <description>Editable text field for note entry.</description>
        <label>Spend Request Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Spend_Request_Status__c</fullName>
        <label>Spend Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Request_Amount__c</fullName>
        <description>Formula that calculates the sum of requested amount for External Services and Materials.</description>
        <formula>(Request_Amount_External_Services__c + Request_Amount_Materials__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Request Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Spend Request</label>
    <nameField>
        <label>Spend Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Spend Requests</pluralLabel>
    <recordTypes>
        <fullName>Development_Spend_Request</fullName>
        <active>true</active>
        <description>Development Spend Request</description>
        <label>Development Spend Request</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>